# jobspec-database

./: .gitignore  README.md  requirements.txt
convertor/: convertor.ipynb  requirements.txt
data/002311-A/csci-467-project/: bert_baseline.job
data/20000607-lxc/transformerCVAE-origin/: wi
data/2018-BGMP/deduper-adoe21/: deduper.srun
data/2018-BGMP/demultiplexing-MaxHills/: demulti.sh
data/2018-BGMP/demultiplexing-Psilopsych/: BashScript.sh
data/2018-BGMP/demultiplexing-h-klein/: index_1.srun
data/2019-ncovgroup/MolecularAttention/: qm8hyer.sh
data/5cript/mpi_matrix_test/: remote_build_job.sh  remote_run_job.sh
data/6hris/geostat-dcgan/: script.sh
data/A-Buch/IWR-Project-Effective-Software-Testing/: merge_submit.sh
data/A-NGJ/deeplearning2022-footandball/: run_detector.sh
data/AAnnan/wouterProj/: G00_CellBender.sh
data/ADevillers/SimCLR/: eval_simclr_cifar10.slurm  (+3 more)
data/SebastianBitsch/2d-to-3d-transfer-learning/jobspec-cfg/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/SebastianBitsch/2d-to-3d-transfer-learning/jobspec-cfg/tl_2d3d/: train_model.py
lc/data/: top2vec-jobspec-learn-database.md
lc/scripts/: count_jobs.py  prepare_data.py  run_top2vec.py  word2vec.py
scripts/: classify-gemini.py  explore_top2vec.py  get_jobspec_configs.py  get_jobspecs.py  inspect-gemini.py  mistral-data.yaml  parse_directives.py  process-gemini.py  process-mistral.py  run_doc2vec.py  run_gemma.py  run_top2vec.py  run_top2vec_with_doc2vec.py  search.py  vector_matrix.py  word2vec.py
scripts/data/: jobspec-config-files.json
(+133619 files in other folders)
